[package]
name = "pulsy"
version = "0.1.0"
authors = ["Joseph \"Dunkel\" Zurowski <Dunklheit@users.noreply.github.com>"]
license = "Unlicense"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "pulsy"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "0.4.0"
