[package]
name = "pulsy"
version = "1.0.1"
authors = ["Joseph \"Dunkel\" Zurowski <Dunklheit@users.noreply.github.com>"]
license = "Unlicense"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "pulsy"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
futures = "0.3"
neon = "0.4.0"
pulsar = "1.0.0-alpha"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "0.2"
